<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColorDiff</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="result_orig_color">Original color:</string>
    <string name="result_left_color">Left color:</string>
    <string name="result_right_color">Right color:</string>
    <string name="result_next_button">Next step</string>
    <string name="share_using">Share using:</string>
    <string name="matcher_highest_toast">Choose highest value</string>
    <string name="matcher_lowest_toast">Choose lowest value</string>
    <string name="user_info_name_hint">Your Name</string>
    <string name="user_info_distance_hint">Distance between phone and eyes</string>
    <string name="user_info_phone_model">Phone model:</string>
    <string name="user_info_screen_brightness">Screen brightness:</string>
    <string name="user_info_finish">Finish</string>
    <string name="chooser_select">Select</string>
    <string name="palette_custom_color">Custom color</string>

</resources>
